<resources>
    <string name="app_name">SmartExercise</string>
    <string name="welcome_message1">Welcome to BMI Buddy, your personal fitness companion.</string>
    <string name="welcome_message2">Get ready to embark on a journey to a healthier you.</string>
    <string name="bmi_buddy">BMI Buddy</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password (min 6 characters)</string>
    <string name="enter_your_personal_information">Enter Your Personal Information</string>
</resources>