<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".welcome_page">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="times new roman"
        android:text="@string/bmi_buddy"
        android:textColor="@color/orange_red"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowRadius="2"/>

    <TextView
        android:id="@+id/AppGoal"
        android:layout_width="327dp"
        android:layout_height="73dp"
        android:layout_below="@+id/AppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_message1"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="383dp" />

    <TextView
        android:id="@+id/AppGoal2"
        android:layout_width="360dp"
        android:layout_height="126dp"
        android:layout_below="@+id/AppGoal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_message2"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="383dp" />

    <Button
        android:id="@+id/Loginbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/AppGoal2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/Blue_Eyes"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="512dp" />

    <Button
        android:id="@+id/Registerbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/Halloween_Orange"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="579dp" />

</RelativeLayout>