<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".Register_Page">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="times new roman"
        android:text="@string/bmi_buddy"
        android:textColor="@color/orange_red"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowRadius="15"
        />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/Blue_Dress"
        android:textSize="30sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowRadius="15"/>

    <TextView
        android:id="@+id/register1"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/enter_your_personal_information"
        android:textColor="@color/Black"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@color/white"
        android:hint="@string/full_name"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Your Name"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp" />


    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@color/white"
        android:hint="@string/age"
        android:textColorHint="@color/black"
        android:inputType="number"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Enter your age"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@color/white"
        android:hint="@string/email_address"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/baseline_mail_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Enter your email address"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Create a unique password"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@color/white"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Re enter your Password"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <Button
        android:id="@+id/Signupbtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/Blue_Dress"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="579dp" />

</RelativeLayout>